--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-resource": "1.2.6",
     "angular-cookies": "1.2.6",
     "angular-route": "1.2.6",
-    "angular-bootstrap": "~0.10.0"
+    "angular-bootstrap": "~0.10.0",
+    "angular-growl": "~0.4.0",
+    "angular-animate": "~1.2.14"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
