--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "angular-mocks": "1.2.6",
     "angular-scenario": "1.2.6"
+  },
+  "resolutions": {
+    "angular": "1.2.15"
   }
 }
