Links list : truncate

--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "1.2.6",
     "angular-bootstrap": "~0.10.0",
     "angular-growl": "~0.4.0",
-    "angular-animate": "~1.2.14"
+    "angular-animate": "~1.2.14",
+    "angular-truncate": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
